--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -114,11 +114,11 @@ jobs:
           signingConfigs="$(echo "$signingConfigs" |base64 -d )"
           signingConfig="$(echo "$signingConfig" |base64 -d )"
           sed -i -e "/defaultConfig {/i\\$signingConfigs " -e "/debug {/a\\$signingConfig " -e "/release {/a\\$signingConfig " app/build.gradle
-          cp -f ${{ github.workspace }}/.github/workflows/TVBoxOSC.jks app/tvbb.jks
-          sed -i '$a\RELEASE_STORE_FILE=./tvbb.jks'     ./gradle.properties
-          sed -i '$a\RELEASE_KEY_ALIAS=tvbb'            ./gradle.properties
-          sed -i '$a\RELEASE_STORE_PASSWORD=tvbb'       ./gradle.properties
-          sed -i '$a\RELEASE_KEY_PASSWORD=tvbb'         ./gradle.properties
+          cp -f ${{ github.workspace }}/.github/workflows/TVBoxOSC.jks app/TVBoxOSC.jks
+          sed -i '$a\RELEASE_STORE_FILE=./TVBoxOSC.jks'     ./gradle.properties
+          sed -i '$a\RELEASE_KEY_ALIAS=TVBoxOSC'            ./gradle.properties
+          sed -i '$a\RELEASE_STORE_PASSWORD=TVBoxOSC'       ./gradle.properties
+          sed -i '$a\RELEASE_KEY_PASSWORD=TVBoxOSC'         ./gradle.properties
       - uses: actions/setup-java@v4
         if: ${{ matrix.java_ver }}
         with:
