--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         include:
           - userName: dylan-tao
             repoName: wtvb
-            branchName: main
+            branchName: release-20250513
           - userName: dylan-tao
             repoName: btvb
             branchName: main
