--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -145,7 +145,7 @@ jobs:
             if [[ "$base" == TVBox_* ]]; then
               new_base=$(echo "$base" | sed "s/release/${{ matrix.branchName }}_${{ matrix.userName }}/")
             else
-              new_base="TVB_${{ matrix.branchName }}_${{ matrix.userName }}.apk"
+              new_base="TVBB_${{ matrix.branchName }}_${{ matrix.userName }}.apk"
             fi
             # 移动并重命名文件
             mv "$file" "apk/$new_base"
